--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,16 @@
 {
   "version": 2,
-  "functions": {
-    "api/server.ts": {
-      "runtime": "nodejs20.x",
-      "memory": 1024,
-      "maxDuration": 10
+  "builds": [
+    {
+      "src": "api/server.ts",
+      "use": "@vercel/node"
     }
-  },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/server" }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/server"
+    }
   ]
 }
 
