--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,11 +6,8 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/server"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/server" }
   ]
 }
 
